--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -89,6 +89,9 @@
     - name: Jupyter Notebooks
       displayName: 'example, examples, server, jupyter, azure notebooks, python, notebook, github'
       href: samples-notebooks.md
+    - name: リポジトリの例
+      displayName: 'example, examples, jupyter, python, notebook, github'
+      href: 'https://github.com/Azure/azureml-examples'
     - name: デザイナーの例とデータセット
       displayName: 'example, examples, studio, pipelines, data sets, modules'
       href: samples-designer.md
