--- a/articles/index.yml
+++ b/articles/index.yml
@@ -496,7 +496,7 @@ productDirectory:
     - databases
     url: https://docs.microsoft.com/azure/virtual-machines/windows/sql/virtual-machines-windows-sql-server-iaas-overview?toc=%2Fazure%2Fvirtual-machines%2Fwindows%2Ftoc.json
   - title: 静的 Web アプリ
-    summary: 完全なスタック Web アプリをビルドして GitHub リポジトリから Azure にデプロイする
+    summary: フルスタック Web アプリをビルドして GitHub リポジトリから Azure にデプロイする
     imageSrc: ./media/index/static-apps.svg
     azureCategories:
     - compute
