--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -45,7 +45,7 @@
           href: tutorial-alias-rr.md
 - name: 概念
   items:
-    - name: セキュリティ
+    - name: Security
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -79,7 +79,7 @@
           href: ../virtual-network/virtual-networks-name-resolution-for-vms-and-role-instances.md
         - name: よく寄せられる質問
           href: dns-faq-private.md
-- name: 方法
+- name: 操作方法ガイド
   items:
     - name: パブリック DNS
       items:
