--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -12,12 +12,12 @@ metadata:
   manager: nitinme
   ms.custom: custom-portals-hub
   ms.date: 08/28/2020
-  ms.openlocfilehash: 36e5543f09971d8456e79a59fc2e5457171f710b
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 882b492f3041d225b3861ddcfb36934649b3e987
+  ms.sourcegitcommit: 957c916118f87ea3d67a60e1d72a30f48bad0db6
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91744000"
+  ms.lasthandoff: 10/19/2020
+  ms.locfileid: "92200935"
 highlightedContent:
   items:
   - title: Cognitive Services とは
@@ -29,21 +29,21 @@ highlightedContent:
   - title: Cognitive Services と機械学習
     itemType: concept
     url: ./cognitive-services-and-machine-learning.md
+  - title: Cognitive Services のオンプレミス コンテナー
+    itemType: concept
+    url: ./cognitive-services-container-support.md
+  - title: データベースでの Cognitive Services
+    itemType: concept
+    url: ./big-data/cognitive-services-for-big-data.md
   - title: 言語のサポート
     itemType: reference
     url: ./language-support.md
-  - title: リソースの作成
-    itemType: how-to-guide
-    url: ./cognitive-services-apis-create-account.md
-  - title: コンテナーでの使用
-    itemType: concept
-    url: ./cognitive-services-container-support.md
-  - title: データベースでの使用
-    itemType: concept
-    url: ./big-data/cognitive-services-for-big-data.md
   - title: セキュリティ
     itemType: concept
     url: cognitive-services-security.md
+  - title: サポートとヘルプのオプション
+    itemType: reference
+    url: ./cognitive-services-support-options.md
 conceptualContent:
   items:
   - title: 視覚
@@ -84,7 +84,7 @@ conceptualContent:
       text: Text Analytics
     - url: ./translator/index.yml
       itemType: overview
-      text: Translator
+      text: '[変換者]'
   - title: 音声
     summary: 音声をテキストに変換し、テキストを自然な音声に変換します。 ある言語を別の言語に翻訳し、話者の認証と認識を可能にします。
     links:
