commit translated contents

--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -61,6 +61,8 @@
           href: plan-sso-deployment.md
         - name: シングル サインオンのオプション
           href: sso-options.md
+        - name: OIDC ベースの SSO
+          href: configure-oidc-single-sign-on.md
         - name: SAML ベースの SSO
           href: configure-saml-single-sign-on.md
         - name: パスワードベースの SSO
@@ -97,7 +99,7 @@
           href: application-proxy-connectors.md
         - name: コネクタ グループ
           href: application-proxy-connector-groups.md
-        - name: Security
+        - name: セキュリティ
           href: application-proxy-security.md
         - name: ネットワーク トポロジ
           href: application-proxy-network-topology.md
