--- a/articles/data-share/index.yml
+++ b/articles/data-share/index.yml
@@ -10,13 +10,13 @@ metadata:
   ms.collection: collection
   author: hrasheed-msft
   ms.author: hrasheed
-  ms.date: 08/11/2020
-  ms.openlocfilehash: 43de19b3caa87bf410ad30a237c2c9e91beba63f
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.date: 10/20/2020
+  ms.openlocfilehash: cd1e23d464baa593ed5f63683664ca355e467168
+  ms.sourcegitcommit: ce8eecb3e966c08ae368fafb69eaeb00e76da57e
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "88136373"
+  ms.lasthandoff: 10/21/2020
+  ms.locfileid: "92311695"
 landingContent:
 - title: Azure Data Share について
   linkLists:
@@ -44,25 +44,31 @@ landingContent:
       url: subscribe-to-data-share.md
   - linkListType: how-to-guide
     links:
-    - text: データセットの追加
-      url: how-to-add-datasets.md
-    - text: データセット マッピングの構成
-      url: how-to-configure-mapping.md
+    - text: Azure Storage からの共有
+      url: how-to-share-from-storage.md
+    - text: Azure SQL Database または Synapse Analytics からの共有
+      url: how-to-share-from-sql.md
+    - text: Azure Data Explorer からの共有
+      url: https://docs.microsoft.com/azure/data-explorer/data-share
 - title: 監視と管理
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 共有の監視
-      url: how-to-monitor.md
-    - text: 一般的な問題のトラブルシューティング
-      url: data-share-troubleshoot.md
+    - text: データセットの追加
+      url: how-to-add-datasets.md
     - text: 受信者の追加
       url: how-to-add-recipients.md
+    - text: データセット マッピングの構成
+      url: how-to-configure-mapping.md
     - text: 招待の削除
       url: how-to-delete-invitation.md
     - text: 共有サブスクリプションの取り消し
       url: how-to-revoke-share-subscription.md
+    - text: 共有の監視
+      url: how-to-monitor.md
     - text: Azure Data Share のセキュリティの概要
       url: security.md
     - text: 障害復旧
       url: disaster-recovery.md
+    - text: 一般的な問題のトラブルシューティング
+      url: data-share-troubleshoot.md
