--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -50,7 +50,7 @@
   items:
     - name: Azure VMware Solution を有効にする
       href: enable-azure-vmware-solution.md
-    - name: 予約インスタンスのコスト削減
+    - name: 予約インスタンスを使用してコストを削減する
       href: reserved-instance.md
     - name: 移行評価
       href: ../migrate/how-to-create-azure-vmware-solution-assessment.md?context=/azure/migrate/context/migrate-context.json
@@ -105,4 +105,4 @@
 - name: リファレンス
   items:
     - name: Azure PowerShell
-      href: /powershell/module/az.vmware
+      href: 'https://docs.microsoft.com/powershell/module/az.vmware/'
