--- a/articles/cognitive-services/Computer-vision/breadcrumb/toc.yml
+++ b/articles/cognitive-services/Computer-vision/breadcrumb/toc.yml
@@ -9,3 +9,14 @@
         - name: Computer Vision の空間分析
           tocHref: /legal/cognitive-services/computer-vision/
           topicHref: /azure/cognitive-services/Computer-vision/index
+- name: Azure
+  tocHref: /azure/
+  topicHref: /azure/index
+  items:
+    - name: Cognitive Services
+      tocHref: /azure/cognitive-services/
+      topicHref: /azure/cognitive-services/index
+      items:
+        - name: Computer Vision
+          tocHref: /azure/cognitive-services/
+          topicHref: /azure/cognitive-services/computer-vision/index
